[project]
name = "FletXr"
version = "0.1.4"
description = "The GetX-inspired Python Framework for Building Reactive, Cross-Platform Apps with Flet"
readme = "PYPI.md"
license = {file = "LICENSE"}
authors = [{ name = "AllDotPy", email = "hello@alldotpy.com" }]
maintainers = [{ name = "#Einswilli", email = "einswilligoeh@email.com" }]
requires-python = ">=3.10,<=3.13"
keywords = [
    "fletx", "fletxr", "flet", "reactive state",
    "routing", "di", "dependency injection"
]
dependencies = [
    "aiohttp>=3.9.5",
    "pydantic>=2.11.5",
    "packaging>=21.0",
    "flet==0.28.3",
    "requests>=2.31.0",     # For packaging
]

[project.scripts]
fletx = "fletx.__main__:main"

[project.urls]
Homepage = "https://github.com/AllDotPy/FletX"
Repository = "https://github.com/AllDotPy/FletX"
Documentation = "https://alldotpy.github.io/FletX"
Tracker = "https://github.com/AllDotPy/FletX/issues"

# Optional deps
[project.optional-dependencies] 
dev = [
    "flet-cli==0.28.3",
    "flet-desktop==0.28.3",
    "flet-web==0.28.3",
    "pytest>=8.4.0",
]

# Dependency groups for FletX development
[dependency-groups]
dev = [
    "flet-cli==0.28.3",
    "flet-desktop==0.28.3",
    "flet-web==0.28.3",
    "black", 
    "mypy",
    "twine",
    "uv",
    "build",
    "pytest>=8.4.0", 
    "pytest-asyncio>=1.3.0",
    "mkdocs>=1.6.1",
    "setuptools>=80.8.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.setuptools]
packages = ["fletx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
